<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/green"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            style="@style/ClickableStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="openMenu"
            android:scaleType="centerInside"
            android:src="@drawable/ic_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_above="@+id/bottomTool"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_white_stoke"
            android:padding="6dp">

            <EditText
                android:id="@+id/etInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="top|left"
                android:hint="@string/input_here"
                android:maxLength="500"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:drawableRight="@drawable/ic_input"
                android:drawablePadding="4dp"
                android:text="0/500"
                android:textSize="14sp" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/bottomTool"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:paddingLeft="62dp"
            android:paddingRight="62dp">

            <ImageView
                android:id="@+id/openOCR"
                style="@style/ClickableStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_ocr" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/translate"
                style="@style/CardViewClick"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_green_round_corner"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/translate"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/voice"
                style="@style/ClickableStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_voice" />


        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>