<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/extractCoin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/auto_copy"
                    android:textColor="#696969"
                    android:textSize="16sp" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/switchAutoCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswBackDrawable="@drawable/ios_back_drawable"
                    app:kswBackMeasureRatio="1.4"
                    app:kswThumbDrawable="@drawable/ios_thumb_selector"
                    app:kswThumbMarginBottom="-8dp"
                    app:kswThumbMarginLeft="-5dp"
                    app:kswThumbMarginRight="-5dp"
                    app:kswThumbMarginTop="-2.5dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/modifyPwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="@{handler.click}"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/auto_speak"
                    android:textColor="#696969"
                    android:textSize="16sp" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/switchAutoSpeak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswBackDrawable="@drawable/ios_back_drawable"
                    app:kswBackMeasureRatio="1.4"
                    app:kswThumbDrawable="@drawable/ios_thumb_selector"
                    app:kswThumbMarginBottom="-8dp"
                    app:kswThumbMarginLeft="-5dp"
                    app:kswThumbMarginRight="-5dp"
                    app:kswThumbMarginTop="-2.5dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/clearHistory"
            style="@style/ClickableStyle_"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/clear_history"
            android:textColor="#696969"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>